slight css formatting fix with extra margins for people and persons div and missing row classes

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -33,13 +33,10 @@ body {
   font-size: 36px;
   font-weight: bold;
 }
-  #people, #person, #next25, #loading {
+#people, #person, #next25, #loading 
+{
       display:none;
-  }
-  #people, #person,#next25 {
-      margin: 1em 1em;
-      font-weight: bold;
-  }
+}
 
 
 /* Customize container */
